# MentalHealthRAGApp

./: README.md  app.py  pyproject.toml
data/: guide.txt
data/processed_data/: ProcessedCombinedData.csv.dvc  ProcessedCombinedDataWithFeatures.csv.dvc
data/raw_data/csv_directory/: ProcessedCombinedData.csv.dvc
data/raw_data/txt_directory/: LauraGInforme.txt  LauraGonzalezInforme.txt  MariaPInforme  TomasGonzalezInforme.txt
data/text_data_db/: chroma.sqlite3
data/vector_store/: chroma.sqlite3
models/: vectorizer.pkl
models/mlruns/0/: meta.yaml
models/mlruns/0/9c1d6cdb40794bffb2fde6a355369147/: meta.yaml
models/mlruns/0/9c1d6cdb40794bffb2fde6a355369147/artifacts/XGBoost/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
models/mlruns/0/9c1d6cdb40794bffb2fde6a355369147/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
models/mlruns/0/a812391e611a47f6bb967578fa08456d/: meta.yaml
models/mlruns/0/a812391e611a47f6bb967578fa08456d/metrics/: accuracy
models/mlruns/0/a812391e611a47f6bb967578fa08456d/tags/: mlflow.runName
notebooks/: demoRAGOllama.ipynb
notebooks/path_to_persist_directory/: chroma.sqlite3
src/: main.py
src/chromadb/: chroma.sqlite3
src/features/: embedding_generator.py  feature_extractor.py  text_processor.py
src/model/: model_trainer.py  patient_status_classifier.py  recommendation_generator.py
src/utils/: document_manager.py  logger.py
